--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,19 @@
 
     <footer class="container-fluid pb-3">
         <form id="enviaMsg">
-            <small>Envie sua msg:</small>
-            <input type="text" name="msg" class="form-control form-control-sm" autocomplete="off">
+            <div class="form-row">
+                <div class="col-3">
+                    <small>Seu nome:</small>
+                    <input type="text" name="nome" class="form-control form-control-sm" disabled>
+                </div>
+                <div class="col-8">
+                    <small>Envie sua msg:</small>
+                    <input type="text" name="msg" class="form-control form-control-sm" autocomplete="off">
+                </div>
+                <div class="col-1">
+                    <button class="btn btn-sm btn-primary d-block w-100 mt-4">Enviar</button>
+                </div>
+            </div>
         </form>
     </footer>
 
@@ -40,31 +51,49 @@
 
     <script>
         const socket = io();
+        var countMsg = 0;
 
         const typeMsg = {
-            'event': `<div class='alert alert-light text-center' role='alert'>{{msg}}</div>`,
-            'other': `<div class='alert alert-dark w-75 mr-auto' role='alert'><small class='float-right'>${
-                new Date().toLocaleString()
-            }</small>{{msg}}</div>`,
-            'my': `<div class='alert alert-info w-75 ml-auto' role='alert'><small class='float-right'>${
-                new Date().toLocaleString()
-            }</small>{{msg}}</div>`,
+            'event': `<div class='alert alert-light text-center' role='alert'>{{ msg }}</div>`,
+            'other': `<div class='alert alert-dark w-75 mr-auto' role='alert'><small class='float-right'>{{ momento }}</small>{{ msg }}</div>`,
+            'my': `<div class='alert alert-info w-75 ml-auto' role='alert'><small class='float-right'>{{ momento }}</small>{{ msg }}</div>`,
+        }
+
+        function strReplace(str, obj) {
+            Object.keys(obj)
+            .forEach(key => {
+                const regex = new RegExp(`{{\\s*${ key }\\s*}}`, 'gi');
+
+                str = str.replace(regex, obj[key]);
+            })
+
+            return str;
         }
 
         function exibiMsg(type, msg) {
 
             document.querySelector('#chat')
-            .insertAdjacentHTML('beforeend', typeMsg[type].replace('{{msg}}', msg))
+            .insertAdjacentHTML('beforeend', strReplace( typeMsg[type], {
+                msg, momento: new Date().toLocaleString() 
+            }))
 
         }
 
         function enviaMsg(ev) {
             ev.preventDefault();
+            
+            if (!ev.target.msg.value) return;
 
-            socket.emit('msg', ev.target.msg.value);
-            exibiMsg('my', ev.target.msg.value);
+            if (countMsg == 0) {
+                socket.emit('newUser', ev.target.msg.value.replace(/[^\S]+/gi, '').toLowerCase());
+                ev.target.nome.value = ev.target.msg.value.replace(/[^\S]+/gi, '').toLowerCase();
+            } else {
+                socket.emit('msg', ev.target.msg.value);
+                exibiMsg('my', ev.target.msg.value);
+            }
 
             ev.target.msg.value = "";
+            countMsg += 1;
         }
 
         document.querySelector('#enviaMsg').addEventListener('submit', enviaMsg);
