--- a/public/index.html
+++ b/public/index.html
@@ -21,89 +21,6 @@
     </style>
 </head>
 <body class="bg-light">
-
-    <main id="chat" class="container-fluid pt-5">
-    </main>
-
-    <footer class="container-fluid pb-3">
-        <form id="enviaMsg">
-            <div class="form-row">
-                <div class="col-3">
-                    <small>Seu nome:</small>
-                    <input type="text" name="nome" class="form-control form-control-sm" disabled>
-                </div>
-                <div class="col-8">
-                    <small>Envie sua msg:</small>
-                    <input type="text" name="msg" class="form-control form-control-sm" autocomplete="off">
-                </div>
-                <div class="col-1">
-                    <button class="btn btn-sm btn-primary d-block w-100 mt-4">Enviar</button>
-                </div>
-            </div>
-        </form>
-    </footer>
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>    
-    <script src="/socket.io/socket.io.js"></script>
-
-    <script>
-        const socket = io();
-        var countMsg = 0;
-
-        const typeMsg = {
-            'event': `<div class='alert alert-light text-center' role='alert'>{{ msg }}</div>`,
-            'other': `<div class='alert alert-dark w-75 mr-auto' role='alert'><small class='float-right'>{{ momento }}</small>{{ msg }}</div>`,
-            'my': `<div class='alert alert-info w-75 ml-auto' role='alert'><small class='float-right'>{{ momento }}</small>{{ msg }}</div>`,
-        }
-
-        function strReplace(str, obj) {
-            Object.keys(obj)
-            .forEach(key => {
-                const regex = new RegExp(`{{\\s*${ key }\\s*}}`, 'gi');
-
-                str = str.replace(regex, obj[key]);
-            })
-
-            return str;
-        }
-
-        function exibiMsg(type, msg) {
-
-            document.querySelector('#chat')
-            .insertAdjacentHTML('beforeend', strReplace( typeMsg[type], {
-                msg, momento: new Date().toLocaleString() 
-            }))
-
-        }
-
-        function enviaMsg(ev) {
-            ev.preventDefault();
-            
-            if (!ev.target.msg.value) return;
-
-            if (countMsg == 0) {
-                socket.emit('newUser', ev.target.msg.value.replace(/[^\S]+/gi, '').toLowerCase());
-                ev.target.nome.value = ev.target.msg.value.replace(/[^\S]+/gi, '').toLowerCase();
-            } else {
-                socket.emit('msg', ev.target.msg.value);
-                exibiMsg('my', ev.target.msg.value);
-            }
-
-            ev.target.msg.value = "";
-            countMsg += 1;
-        }
-
-        document.querySelector('#enviaMsg').addEventListener('submit', enviaMsg);
-
-        socket.on('nova-msg', (msg) => {
-            exibiMsg('other', msg)
-        })
-        socket.on('evento', (msg) => {
-            exibiMsg('event', msg)
-        })
-    </script>
+    <h1>API para TMJ</h1>
 </body>
 </html>
